fixed about gap in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   background-color: #222222;
 
   /* Prevent content hiding behind fixed navbar */
-  padding-top: 80px;
+  /* padding-top: 80px; */
 }
 
 /* Smooth scrolling for SPA navigation */
